--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,33 @@
   box-sizing: border-box;
   font-family: 'Inter', sans-serif;
 }
+.auth-container {
+  display: flex;
+  height: 100vh;
+  /* padding: 0 5vw; */
+  align-items: center;
+  background-color: #e9fcfd;
+}
+
+
+.image-section {
+  /* width: 70%; */
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-section img {
+  max-width: 100%;
+  max-height: 90%; /* Add some space top and bottom */
+  object-fit: contain; /* Keeps aspect ratio without cropping */
+}
+
+.content-section {
+  /* width: 30%; */
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
