--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,9 @@
 .auth-container {
   display: flex;
   height: 100vh;
-  /* padding: 0 5vw; */
+  padding: 0 5vw;
   align-items: center;
+  justify-content: space-between;
   background-color: #e9fcfd;
 }
 
