--- a/src/components/SignUpForm.css
+++ b/src/components/SignUpForm.css
@@ -1,5 +1,5 @@
 .signup-form {
-  padding: 25px;
+  padding: 20px;
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 0 8px rgba(0,0,0,0.1);
@@ -67,5 +67,6 @@
 }
 .bottomSection h4 {
   color: #88bab4;
+  text-decoration: underline;
   cursor: pointer;
 }
