--- a/src/index.css
+++ b/src/index.css
@@ -37,18 +37,8 @@
   width: 100%;
   height: auto;
   display: block;
-  border-radius: 8px; /* optional rounded corners */
+  border-radius: 8px; 
 }
-
-/* .image-section {
-  background-color: purple;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-*/
 
 .image-section img {
   max-width: 100%;
@@ -61,4 +51,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.container-padding{
+  max-width: 1200px;    
+  margin: 0 auto;
 }
