--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,11 @@
   justify-content: center;
 }
 
-.container-padding{
-  max-width: 1300px;    
+.page-container {
+  padding: 20px;
+  max-width: 1350px;
   margin: 0 auto;
+}
+.home-container{
+  background-color: #E6F4F1;
 }
