--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,24 @@
 .home-container{
   background-color: #E6F4F1;
 }
+.home-layout{
+  display: flex;
+  justify-content: space-between;
+}
+.orange-btn{
+  width: 100%;
+  padding: 10px;
+  background-color: #ff7d33; 
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 17px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: 12px;
+}
+
+.orange-btn:hover {
+  background-color: #e75f11; 
+}
