--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,12 @@
 nav{
     padding: 0px 100px;
     box-shadow: 0 8px 10px rgba(106, 109, 159, 0.2);
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    background: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(24px);
+    -webkit-backdrop-filter: blur(24px);
 }
 .navbarcontainer{
     display: flex;
@@ -44,10 +50,4 @@ nav{
 }
 .nav-button button:hover{
     background-color: #ea580c;
-}
-.glass{
-        background: rgba(255, 255, 255, 0.5);
-        backdrop-filter: blur(24px);
-        -webkit-backdrop-filter: blur(24px);
-        box-shadow: 0 5px 15px rgba(31, 38, 135, 0.3);
 }
