--- a/src/styles/ServiceProviderCard.css
+++ b/src/styles/ServiceProviderCard.css
@@ -1,11 +1,66 @@
-.service-card-container{
-    border: 1px solid black;
+.service-card-container {
+  width: 600px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  box-sizing: border-box;
+}
+
+.left-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 120px;
+  height: 120px;
+  border-radius: 8px;
+  margin-right: 24px;
+  font-weight: bold;
+}
+
+.service-provider-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 6px;
+}
+
+.right-section {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+}
+
+.details-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  gap: 8px;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.info-group {
+  display: flex;
+  gap: 40px;
+  font-weight: 600;
+  font-size: 16px;
+  margin: 12px 0px;
+}
+.info-group1{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 900px;
-    padding: 15px;
-    height: 200px;
-    margin: 100px auto 0 auto;
-    border-radius: 15px;
+    gap: 40px;
+  font-weight: 600;
+  font-size: 15x;
+}
+.action-section {
+  align-self: center;
 }
