--- a/src/styles/SignUpForm.css
+++ b/src/styles/SignUpForm.css
@@ -1,13 +1,12 @@
 .signup-form {
-  padding: 20px;
+  padding: 15px 30px;
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 0 8px rgba(0,0,0,0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
-  height: auto;
+  gap: 12px;
 }
 
 .signup-form .input-row {
@@ -18,6 +17,7 @@
 .signup-form input[type="text"],
 .signup-form input[type="email"],
 .signup-form input[type="password"],
+.signup-form input[type="tel"],
 .signup-form select {
   width: 350px;
   height: 45px;
@@ -53,7 +53,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: 90vh;
-  padding: 20px;
+  padding: 0px 20px;
 }
 
 .bottomSection{
